--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "navjot-assurance",
+  "name": "diamond-recommendation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
